@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 2.14.3
 Date: ????
-  Changes:
+  Graphics:
+    - Fixed shortcut icon for the cleanup tool.
 ---------------------------------------------------------------------------------------------------
 Version: 2.14.2
 Date: 2026-02-12
